--- a/doc/geosphere.tex
+++ b/doc/geosphere.tex
@@ -144,7 +144,7 @@ $$
 $$
 
 We know that $\sin\delta$ is non-zero because we have assumed that $S$
-and $E$ are different points.
+and $E$ are distinct points and that they are not antipodal.
 
 \section{Bearing and Distance to Coordinates}
 For computation (2) we are given a starting point $S$ with coordinates
