--- a/doc/geosphere.tex
+++ b/doc/geosphere.tex
@@ -148,7 +148,7 @@ and $E$ are distinct points and that they are not antipodal.
 
 \section{Bearing and Distance to Coordinates}
 For computation (2) we are given a starting point $S$ with coordinates
-$(\lat S, 0)$ a bearing $\beta$, and a distance $\delta$.  We need to compute
+$(\lat S, 0)$, a bearing $\beta$, and a distance $\delta$.  We need to compute
 the coordinates $(\lat E, \long E)$ of the ending point $E$ of the geodesic path
 $\gamma$ with bearing $\beta$ and length $\delta$.  (Note that longitude
 is undefined if $E$ is a pole.)
